# ollama-web

./: .env  .env.example  .gitignore  README.md  app.py  config.py  design.md  fetch_manager.py  history_manager.py  llama_vision.py  model_manager.py  prompt_manager.py  prompts.json  pyproject.toml  query_history.json  requirements-dev.txt  run_tests.py
static/js/: fetch-button.js  model-manager.js  model-pull.js  model-selector.js  ollama-status.js  prompt-manager.js
templates/: index.html
tests/: conftest.py  test_app.py  test_config.py  test_history.py  test_model_manager.py  test_prompts.py  test_session.py
