[project]
name = "llama-vision"
version = "0.1.0"
description = "A web application for image analysis using Ollama's vision models"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "flask>=3.0.0",
    "flask-wtf>=1.2.1",
    "werkzeug>=3.0.0",
    "ollama>=0.1.6",
    "requests>=2.32.3",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
